roles/deploy_application/files/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: todo-app
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  defaultBackend:
    service:
      name: todo-app
      port:
        number: 80
  ingressClassName: nginx
  rules:
  - host: boschvm2.switzerlandnorth.cloudapp.azure.com
    https:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: todo-app
            port:
              number: 80
